--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/news_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
-
