--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -15,21 +15,13 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <FrameLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <TextView
         android:id="@+id/newslist_feed_unavailable"
-        android:background="@color/grey"
-        android:visibility="invisible"
-        android:layout_gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/feed_unavailable"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    </FrameLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/feed_unavailable"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="invisible" />
 
 </FrameLayout>
