--- a/app/src/main/res/layout/news_listview_item.xml
+++ b/app/src/main/res/layout/news_listview_item.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/newslist_listview_item_printheadline"
-        android:layout_width="270dp"
+        android:layout_width="@dimen/news_listview_item_text_width"
         android:layout_height="wrap_content"
         android:layout_gravity="left|center_vertical"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -21,7 +21,6 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@android:drawable/ic_menu_help"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin" />
 
 </FrameLayout>
