--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="newslist_margin">10dp</dimen>
     <dimen name="news_listview_item_image_size">50dp</dimen>
+    <dimen name="news_listview_item_text_width">270dp</dimen>
 </resources>
