--- a/app/src/main/res/layout/news_listview_item.xml
+++ b/app/src/main/res/layout/news_listview_item.xml
@@ -10,6 +10,8 @@
         android:layout_gravity="left|center_vertical"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
