--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="newslist_margin">10dp</dimen>
     <dimen name="news_listview_item_image_size">50dp</dimen>
     <dimen name="news_listview_item_text_width">270dp</dimen>
+    <dimen name="news_detail_text_margin">20dp</dimen>
+    <dimen name="news_detail_title_margin">20dp</dimen>
+    <dimen name="news_detail_image_height">180dp</dimen>
 </resources>
