--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/news_detail_image"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/news_detail_image_height"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="@android:drawable/bottom_bar" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/news_detail_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/news_detail_image"
-        android:layout_marginLeft="@dimen/news_detail_title_margin"
-        android:layout_marginStart="@dimen/news_detail_title_margin"
-        android:layout_marginTop="@dimen/news_detail_title_margin"
-        android:text="@string/title_example"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/news_detail_title">
+        <ImageView
+            android:id="@+id/news_detail_image"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/news_detail_image_height"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <TextView
-            android:id="@+id/news_detail_text"
+            android:id="@+id/news_detail_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/news_detail_image"
+            android:layout_marginBottom="@dimen/news_detail_title_margin_vertical"
+            android:layout_marginLeft="@dimen/news_detail_title_margin_horizontal"
+            android:layout_marginRight="@dimen/news_detail_title_margin_horizontal"
+            android:layout_marginTop="@dimen/news_detail_title_margin_vertical"
+            android:text="@string/title_example"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/news_detail_text_margin"
-            android:text="@string/lorem_ipsum"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    </ScrollView>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/news_detail_title">
 
+            <TextView
+                android:id="@+id/news_detail_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/news_detail_text_margin_non_top"
+                android:layout_marginLeft="@dimen/news_detail_text_margin_non_top"
+                android:layout_marginRight="@dimen/news_detail_text_margin_non_top"
+                android:layout_marginTop="@dimen/news_detail_text_margin_top"
+                android:text="@string/lorem_ipsum"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </FrameLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
